--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tabler/icons-react": "^3.19.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "cookie": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
     "nanoid": "^5.0.9",
